--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,14 +2,14 @@ version: 0.1
 
 environment_variables:
   plaintext:
-    HUGO_VERSION: "0.79.1"
+    HUGO_VERSION: "0.128.0"
     
 phases:
   install:
     commands:                                                                 
       - cd /tmp
-      - wget https://github.com/gohugoio/hugo/releases/download/v0.80.0/hugo_extended_0.80.0_Linux-64bit.tar.gz
-      - tar -xzf hugo_extended_0.80.0_Linux-64bit.tar.gz
+      - wget https://github.com/gohugoio/hugo/releases/download/v0.128.0/hugo_extended_0.128.0_Linux-64bit.tar.gz
+      - tar -xzf hugo_extended_0.128.0_Linux-64bit.tar.gz
       - mv hugo /usr/bin/hugo
       - cd 
       - rm -rf /tmp/*
@@ -19,5 +19,5 @@ phases:
       - hugo 
   post_build:
     commands:
-      - aws s3 sync --delete public s3://dukefeb1
+      - aws s3 sync --delete public s3://kithomak-cloud-project-1
       - echo Build completed on `date`
