--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,4 @@
-version: 0.1
+version: 0.2
 
 environment_variables:
   plaintext:
@@ -6,18 +6,20 @@ environment_variables:
     
 phases:
   install:
+    runtime-versions:
+      docker: 18
     commands:                                                                 
       - cd /tmp
-      - wget https://github.com/gohugoio/hugo/releases/download/v0.128.0/hugo_extended_0.128.0_Linux-64bit.tar.gz
-      - tar -xzf hugo_extended_0.128.0_Linux-64bit.tar.gz
+      - wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.tar.gz
+      - tar -xzf hugo_${HUGO_VERSION}_Linux-64bit.tar.gz
       - mv hugo /usr/bin/hugo
-      - cd 
+      - cd - 
       - rm -rf /tmp/*
   build:
     commands:
       - rm -rf public
-      - hugo 
+      - hugo
+      - aws s3 sync public/ s3://kithomak-cloud-project-1/ --region us-west-2 --delete
   post_build:
     commands:
-      - aws s3 sync --delete public s3://kithomak-cloud-project-1
       - echo Build completed on `date`
