--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ URL = "s3://kithomak-cloud-project-1/?region=us-west-2"
   sub = "I'm a Data Scientist learning MLOps"
 
 [params.main]
-  latestPublishHeader = "My Latest Project"
+  latestPublishHeader = "My Latest Posts"
 
 [taxonomies]
   design = "designs"
